--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "DataTorch <support@datatorch.io>",
   "license": "MIT",
   "scripts": {
-    "test": "lerna run test --npm-client=yarn",
+    "test": "jest",
+    "build": "lerna run build --npm-client=yarn",
     "bootstrap": "lerna bootstrap --npm-client=yarn",
     "clean": "rimraf packages/**/dist packages/**/*.tsbuildinfo",
     "update": "yarn upgrade-interactive --latest",
