--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,5 @@
     }
   },
   "include": ["packages"],
-  "exclude": ["node_modules", "dist", "**/*.spec.ts"]
+  "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.stories.ts"]
 }
