feat: add media query

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "forceConsistentCasingInFileNames": true,
 
     "lib": ["esnext", "esnext.asynciterable", "dom", "dom.iterable"],
-    "types": ["@types/node", "@types/jest"],
+    "types": ["@types/node", "@types/jest", "@types/resize-observer-browser"],
     "baseUrl": ".",
     "paths": {
       "*": ["typings/*"]
