--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
+    "@types/resize-observer-browser": "^0.1.3",
     "@vue/composition-api": "^0.6.4",
     "@vue/runtime-dom": "^3.0.0-beta.15",
     "@vue/test-utils": "^1.0.3",
