--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependenices
       run: yarn --frozen-lockfile
     - name: Run tests
-      run: yarn test
+      run: yarn test --coverage
     - name: Submit coverage
       uses: coverallsapp/github-action@master
       with:
