--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.0",
+    "@types/jest": "^26.0.9",
     "@types/resize-observer-browser": "^0.1.3",
-    "@vue/composition-api": "^0.6.4",
-    "@vue/runtime-dom": "^3.0.0-beta.15",
+    "@vue/composition-api": "^1.0.0-beta.8",
+    "@vue/runtime-dom": "^3.0.0-rc.5",
     "@vue/test-utils": "^1.0.3",
-    "jest": "^26.0.1",
+    "jest": "^26.2.2",
     "lerna": "^3.22.1",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.1.0",
-    "typescript": "^3.9.5",
+    "ts-jest": "^26.1.4",
+    "typescript": "^3.9.7",
     "vue": "^2.6.11",
-    "vue-loader": "^15.9.2",
+    "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.11",
     "vue-tsx-support": "^2.3.3"
   }
