--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.9",
     "@types/resize-observer-browser": "^0.1.3",
     "@vue/composition-api": "^1.0.0-beta.8",
